added saved games page

--- a/app/views/board_games/new.erb
+++ b/app/views/board_games/new.erb
@@ -15,6 +15,8 @@
     <input type="text" name="game_length" id="game_length"><br>
     <label for="setup_time">Setup time:   
     <input type="text" name="setup_time" id="setup_time"><br>
+    <label for="is_saved?">Do you want to save this game?:   
+    <input type="checkbox" name="is_saved?" id="is_saved?"><br>
     
     
     <input type="submit" name="Submit" id="submit">
