--- a/app/views/board_games/saved.erb
+++ b/app/views/board_games/saved.erb
@@ -1,9 +1,11 @@
 <h2>Hello <%= "#{@user.username}" %></h2>
-
+    
     <% @games.each_with_index do |game, index| %>
-    <p><a href=<%="/games/#{game.id}"%>>View <%="#{game.name}"%></a></p>
+    <% if game.is_saved?%>
+        <p><a href=<%="/games/#{game.id}"%>>View <%="#{game.name}"%></a></p>
     <!--<p><%= "#{index+1}.  #{game.name}" %></p>-->
     <!--<p><a href=<%="/games/#{game.id}"%>>View this game</a></p>-->
+        <% end %>
     <% end %>
         
 
