--- a/app/views/board_games/show.erb
+++ b/app/views/board_games/show.erb
@@ -1,16 +1,18 @@
 <h2> <%= @game.name %></h2>
+<h3>These are all the board games in the database</h3>
 <h4>Description: <%= @game.description %></h4>
 <h5>Number of players: <%= @game.number_of_player %></h5>
 <h5>Minimum age: <%= @game.minimum_age %></h5>
 <h5>Difficulty: <%= @game.difficulty %></h5>
 <h5>Game length: <%= @game.game_length %></h5>
 <h5>Setup time: <%= @game.setup_time %></h5>
-
+<h5>Saved game: <%= @game.is_saved? %></h5>
+<br>
 <form action=<%="/games/#{@game.id}"%> method="POST">
     <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="Delete game" id="Delete game">
 </form>
-
+<br>
     <p><a href=<%="/games/#{@game.id}/edit"%>>Edit this game</a></p>
-    <p><a href=<%="/games"%>>See all my games</a></p>
+    <p><a href=<%="/games"%>>See all games</a></p>
 
