--- a/app/views/board_games/show.erb
+++ b/app/views/board_games/show.erb
@@ -3,7 +3,7 @@
 <h4>Description: <%= @game.description %></h4>
 <h5>Number of players: <%= @game.number_of_player %></h5>
 <h5>Minimum age: <%= @game.minimum_age %></h5>
-<h5>Difficulty: <%= @game.difficulty %></h5>
+<h5><%= @game.difficulty %></h5>
 <h5>Game length: <%= @game.game_length %></h5>
 <h5>Setup time: <%= @game.setup_time %></h5>
 <h5>Saved game: <%= @game.is_saved? %></h5>
