--- a/app/views/board_games/edit.erb
+++ b/app/views/board_games/edit.erb
@@ -15,10 +15,9 @@
     <input type="text" name="game_length" value="<%=@game.game_length %>"><br>
     <label for="setup_time">Edit the game's setup time:   
     <input type="text" name="setup_time" value="<%=@game.setup_time %>"><br>
-    <label for="saved">Do you want to save this game?   
-    <!--<input type="checkbox" name="is_saved?" value="<%=@game.is_saved? %>" <%='checked' if @game.user_id==@user.id %><br>
-    -->
-    
+    <label for="is_saved">Do you want to save this game?   
+    <input type="checkbox" name="is_saved" value="<%=@game.is_saved %>" <%='checked' if @game.user_id==@user.id %><br>
+    <br>
     <input type="submit" value="Update">
     </form>
 
