--- a/app/views/board_games/saved.erb
+++ b/app/views/board_games/saved.erb
@@ -1,7 +1,7 @@
 <h2>Hello <%= "#{@user.username}" %></h2>
     
     <% @games.each_with_index do |game, index| %>
-    <% if game.is_saved?%>
+    <% if game.is_saved%>
         <p><a href=<%="/games/#{game.id}"%>>View <%="#{game.name}"%></a></p>
     <!--<p><%= "#{index+1}.  #{game.name}" %></p>-->
     <!--<p><a href=<%="/games/#{game.id}"%>>View this game</a></p>-->
