--- a/app/views/board_games/show.erb
+++ b/app/views/board_games/show.erb
@@ -6,7 +6,7 @@
 <h5><%= @game.difficulty %></h5>
 <h5>Game length: <%= @game.game_length %></h5>
 <h5>Setup time: <%= @game.setup_time %></h5>
-<h5>Saved game: <%= @game.is_saved? %></h5>
+<h5>Saved game: <%= @game.is_saved %></h5>
 <br>
 <form action=<%="/games/#{@game.id}"%> method="POST">
     <input type="hidden" name="_method" value="DELETE">
