--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="wrapper">
-    <h1>Welcome to your borad games</h1>
+    <h1>Welcome to your board games</h1>
 
         <%= yield %>
 
