--- a/app/views/board_games/saved.erb
+++ b/app/views/board_games/saved.erb
@@ -1,11 +1,10 @@
 <h2>Hello <%= "#{@user.username}" %></h2>
     
     <% @games.each_with_index do |game, index| %>
-    <% if game.is_saved%>
         <p><a href=<%="/games/#{game.id}"%>>View <%="#{game.name}"%></a></p>
     <!--<p><%= "#{index+1}.  #{game.name}" %></p>-->
     <!--<p><a href=<%="/games/#{game.id}"%>>View this game</a></p>-->
-        <% end %>
+        <!--<% end %>-->
     <% end %>
         
 
@@ -13,7 +12,6 @@
 
     <h4><a href="/games/new">Make a new game</a></h4>
     <br>
-    <!--<h4><a href="/games/saved">See my games</a></h4>
-    <br>-->
+    
 
     <h5><a href="/logout">Log Out</a></h5>
