--- a/app/views/board_games/show.erb
+++ b/app/views/board_games/show.erb
@@ -3,7 +3,7 @@
 <br>
 <h5>Number of players: <%= @game.number_of_player %></h5>
 <h5>Minimum age: <%= @game.minimum_age %></h5>
-<h5>Difficulty<%= @game.difficulty %></h5>
+<h5>Difficulty: <%= @game.difficulty %></h5>
 <h5>Game length: <%= @game.game_length %></h5>
 <h5>Setup time: <%= @game.setup_time %></h5>
 <br>
