can use slugs for board games to navigate

--- a/app/views/board_games/edit.erb
+++ b/app/views/board_games/edit.erb
@@ -1,5 +1,5 @@
 <h2>Edit: <%= @game.name %></h2>
-    <form action=<%="/games/#{@game.id}"%> method="POST">
+    <form action=<%="/games/#{@game.slug}"%> method="POST">
     <input type="hidden" name="_method" value="PATCH">
     <label for="name">Edit the game's name:   
     <input type="text" name="name" value="<%= @game.name %>"><br>
