added search by difficulty

--- a/app/views/board_games/games.erb
+++ b/app/views/board_games/games.erb
@@ -13,5 +13,7 @@
     <br>
     <h4><a href="/games/saved">See my games</a></h4>
     <br>
+    <h4><a href="/games/search">Search for games</a></h4>
+    <br>
 
     <h5><a href="/logout">Log Out</a></h5>
