--- a/app/views/board_games/edit.erb
+++ b/app/views/board_games/edit.erb
@@ -10,7 +10,7 @@
     <label for="minimum_age">Edit the game's minimum age:   
     <input type="text" name="minimum_age" value="<%=@game.minimum_age %>"><br>
     <label for="difficulty">Edit the game's difficulty:   
-    <input type="text" name="difficulty" value="<%=@game.minimum_age %>"><br>
+    <input type="text" name="difficulty" value="<%=@game.difficulty %>"><br>
     <label for="game_length">Edit the game's game length:   
     <input type="text" name="game_length" value="<%=@game.game_length %>"><br>
     <label for="setup_time">Edit the game's setup time:   
@@ -19,5 +19,6 @@
     <br>
     <input type="submit" value="Update">
     </form>
+    <br>
 
 
