search by difficulty is in Goal class

--- a/app/views/board_games/difficulty.erb
+++ b/app/views/board_games/difficulty.erb
@@ -1,5 +1,4 @@
-<h2>difficulty</h2>
-
+<h2>Difficulty: <%="#{@difficulty.capitalize}"%></h2>
 <p><% @games_difficulty.each do |game| %></p>
     <p><a href=<%="/games/#{game.slug}"%>>View <%="#{game.name}"%></a></p>
 <p><% end %></p>
