--- a/app/views/board_games/show.erb
+++ b/app/views/board_games/show.erb
@@ -1,4 +1,4 @@
-<h2> <%= @game.name %></h2>
+<h3> <%= @game.name %></h3>
 <h4>Description: <br><%= @game.description %></h4>
 <br>
 <h5>Number of players: <%= @game.number_of_player %></h5>
@@ -6,6 +6,7 @@
 <h5>Difficulty: <%= @game.difficulty %></h5>
 <h5>Game length: <%= @game.game_length %></h5>
 <h5>Setup time: <%= @game.setup_time %></h5>
+<h5>Game saved to your games? <%= !!@game.owner %></h5>
 <br>
 <form action=<%="/games/#{@game.slug}"%> method="POST">
     <input type="hidden" name="_method" value="DELETE">
@@ -13,5 +14,4 @@
 </form>
 <br>
     <p><a href=<%="/games/#{@game.slug}/edit"%>>Edit this game</a></p>
-    <p><a href=<%="/games"%>>See all games</a></p>
-
+    
